clients/ffi/include/tarwyn.h

#define XT_OK 0
typedef struct Handle Handle;
struct Handle *xt_client_new(const char *host,
                             uint16_t push_port,
                             uint16_t req_port,
                             uint16_t sub_port,
                             uint64_t request_timeout_ms,
                             int send_high_water_mark);
int xt_client_start(struct Handle *handle);
void xt_client_free(struct Handle *handle);
int xt_dropped_publishes(const struct Handle *handle, uint64_t *out);
int xt_publish_double(const struct Handle *handle, const char *channel, double value);
int xt_publish_float(const struct Handle *handle, const char *channel, float value);